# hola-audio

./: .gitignore  README.md  hola-audio.spec  pyproject.toml
config/: default.yaml
scripts/: install.bat  install.sh
src/hola_audio/: __init__.py  __main__.py  app.py  cli.py  config.py  widget_app.py
src/hola_audio/asr/: __init__.py  engine.py  online_engine.py
src/hola_audio/audio/: __init__.py  capture.py  player.py
src/hola_audio/correction/: __init__.py  client.py
src/hola_audio/finetune/: __init__.py  dataset.py  trainer.py
src/hola_audio/hotkey/: __init__.py  manager.py
src/hola_audio/ui/: __init__.py  settings.py  tray.py  widget.py
tests/: test_asr.py  test_audio.py  test_config.py  test_correction.py  test_finetune.py  test_online_asr.py
